--- a/Tic Tak Toe/Tic Tak Toe.vcxproj
+++ b/Tic Tak Toe/Tic Tak Toe.vcxproj
@@ -156,6 +156,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Plane.h" />
+    <ClInclude Include="Positions.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Window.h" />
