--- a/Tic Tak Toe/Tic Tak Toe.vcxproj.filters
+++ b/Tic Tak Toe/Tic Tak Toe.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="Texture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Positions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="VertexShader.glsl" />
