implemented mouse input + more efficietnt drawing

--- a/Tic Tak Toe/Tic Tak Toe.vcxproj
+++ b/Tic Tak Toe/Tic Tak Toe.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="TicTakToe.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Input.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="Positions.h" />
     <ClInclude Include="Shader.h" />
