--- a/Tic Tak Toe/Tic Tak Toe.vcxproj.filters
+++ b/Tic Tak Toe/Tic Tak Toe.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClInclude Include="Positions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="VertexShader.glsl" />
