--- a/Tic Tak Toe/Tic Tak Toe.vcxproj
+++ b/Tic Tak Toe/Tic Tak Toe.vcxproj
@@ -124,6 +124,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)Dependencies/STB;$(SolutionDir)Dependencies/GLM\include;$(SolutionDir)Dependencies/GLFW\include\GLFW;$(SolutionDir)Dependencies/GLEW\include\GL;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalUsingDirectories>DEBUG;%(AdditionalUsingDirectories)</AdditionalUsingDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
